fixed modal size on mobile

--- a/src/components/form/MasterForm.module.css
+++ b/src/components/form/MasterForm.module.css
@@ -10,35 +10,30 @@
     position: fixed;
     left: 0;
     top: 0;
+    height: 100vh;
+    width: 100vw;
     display: grid;
     justify-items: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background-color: #000;
-    background-color: rgba(0,0,0, 0.9); 
-    overflow-x: hidden; 
+    grid-template-columns: minmax(100%, 600px);
+    background-color: rgba(0,0,0, 0.7); 
+    z-index: 100;
     transition: 0.5s; 
-    z-index: 100; 
 }
 
 .formContent {
-    background-color: var(--color-background);
+    position: relative;
+    padding: 2vw 5vw;
     background-color: var(--warm-grey-900);
     border-radius: var(--border-roundy);
-    max-width: 900px;
-    max-height: 90vh;
-    margin: auto auto;
-    position: relative;
-    padding: 4rem;
     transition: all 1s;
-    max-width: max(40vw, 300px);
+    z-index: 101;
 }
 
 header {
     /* border-bottom: solid 1px var(--warm-grey-700); */
     margin-bottom: 2rem;
-    padding-bottom: 1rem;
+    /* padding-bottom: 1rem; */
     color: var(--warm-grey-400);
 }
 
@@ -66,10 +61,10 @@ header {
 
 .close {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: .5rem;
-    line-height: 1.5;
+    top: 1rem;
+    right: 1rem;
+    padding: 1rem;
+    line-height: .65;
     font-size: 2rem;
     width: 1.5rem;
     height: 1.5rem;
@@ -82,6 +77,7 @@ header {
 
 .close:hover {
     background-color: var(--warm-grey-700);
+    color: white;
 }
 
 
